# LumosWorkspace

./: .gitmodules  CLAUDE.md  CMakeLists.txt  MACOS_BUNDLE.md  README.md  TODO  TODO.md  run_gui_test.sh  run_gui_test_simple.sh  test_clear_behavior.py  test_fresh_start.py  test_modular_functionality.py  test_package_import.py  test_python_path.py  test_shortcuts.py  test_silent_clear_vars.py  test_socket_fix.py  test_special_commands.py  test_terminal_signals.py  test_ui_restoration.py
platform/macos/: Info.plist.in  README.md  create_icon.sh
scripts/: create_dmg.sh
src/applications/gui_test/: CMakeLists.txt  basic_gui_test.cpp  gui_test_helper.cpp  gui_test_helper.h
src/applications/repl/: CMakeLists.txt  main.cpp
src/applications/repl_gui/: CMakeLists.txt  CMakeLists_modular.txt  CMakeLists_original.txt  DEBUG_API.md  debug_tcp_server.cpp  debug_tcp_server.h  main.cpp  main.h  main_modular.cpp  test_debug_api.py
src/applications/simple/: CMakeLists.txt  main.cpp
src/applications/simple_transmitter/: CMakeLists.txt  main.cpp
src/modules/: custom_title_bar.cpp  custom_title_bar.h  debug_api.cpp  debug_api.h  layout_manager.cpp  layout_manager.h  main_window.cpp  main_window.h  python_engine.cpp  python_engine.h  repl_interface.cpp  repl_interface.h  settings_manager.cpp  settings_manager.h  tcp_server.cpp  tcp_server.h  ui_theme_manager.cpp  ui_theme_manager.h  variables_panel.cpp  variables_panel.h
src/modules/settings_handler/: CMakeLists.txt  platform_path_linux.cpp  platform_path_macos.cpp  platform_path_windows.cpp  settings_handler.cpp  settings_handler.h
src/modules/settings_handler/test/: CMakeLists.txt  settings_handler_test.cpp
src/modules/tcp_client/: CMakeLists.txt  tcp_client.cpp  tcp_client.h
src/modules/tcp_client/test/: CMakeLists.txt  tcp_client_test.cpp
src/modules/tcp_server/: CMakeLists.txt  tcp_server.cpp  tcp_server.h
src/modules/tcp_server/test/: CMakeLists.txt  tcp_server_test.cpp
